tests/ui/struct_not_found.stderr
error: cannot find `Foo` in this scope
   ╭─[tests/ui/struct_not_found.ina:4:13]
   │
 4 │     let a = Foo { a: 32 };
   │             ─┬─
   │              ╰── not found in this scope
   ∙
───╯
